--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
     <header class="container">
         <nav>
             <ul>
+
                 <li>
-                    <a href="">explicando sobre a empresa</a>
-                    <img src="slogam.jpg" alt="">
+                    <a href="">HOME</a>
                 </li>
+
+                <li>
+                    <a href="">CONTATO</a>
+                </li>
+
+                <li>
+                    <a href="">SOBRE</a>
+                </li>
+            <img src="slogam.jpg" alt="">
             </ul>
         </nav>
+
+        
     </header>
 
 
@@ -26,7 +37,7 @@
             <img src="mulher linda.webp" alt="">
         </div>
 
-        <div>
+        <div class="caixa">
             <h1>
                 ANALISE DE CREDITO
             </h1>
