--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 ANALISE DE CREDITO
             </h1>
             <p>
-                Analisar o crédito de um cliente consiste em verificar se ele realmente tem condições de honrar o compromisso assumido. O objetivo é identificar o perfil e as condições financeiras do cliente a partir das suas informações básicas e dos seus dados financeiros
+                olâ lindo tudo bem? eu sou renata muito prazer, bom Analisar o crédito de um cliente consiste em verificar se ele realmente tem condições de honrar o compromisso assumido. O objetivo é identificar o perfil e as condições financeiras do cliente a partir das suas informações básicas e dos seus dados financeiros
             </p>
         </div>
     </section>
