--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <script src="https://kit.fontawesome.com/79e0c7ffbb.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -32,7 +33,7 @@
 
 
 
-    <section id="container-cofre">
+    <section id="sobremessa">
         <div>
             <img src="mulher linda.webp" alt="">
         </div>
@@ -47,7 +48,18 @@
         </div>
     </section>
 
-    <footer></footer>
+    <footer>
+
+        
+
+        <div class="rodape-i">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+
+
+        </div>
+    </footer>
     
 </body>
 </html>
