--- a/index.html
+++ b/index.html
@@ -48,6 +48,43 @@
         </div>
     </section>
 
+    <h2>OS DONOS DA EMPRESA</h2>
+
+    <section class="section">
+
+     <div>
+        <img src="silvio santos.webp" alt="">
+        <p>O PATRÂO</p>
+     </div>
+
+     <div>
+        <img src="./81408283_RI-Rio-de-Janeiro-RJ03-03-2019CARNAVAL-2019Desfile-das-Escolas-do-grupo-especial-J.jpg" alt="">
+        <p>O GERENTE</p>
+     </div>
+
+     <div>
+        <img src="o gerente.webp" alt="">
+        <p>O LIDER</p>
+     </div>
+
+     <div>
+        <img src="silvio santos.webp" alt="">
+        <p>O PATRÂO</p>
+     </div>
+
+     <div>
+        <img src="./81408283_RI-Rio-de-Janeiro-RJ03-03-2019CARNAVAL-2019Desfile-das-Escolas-do-grupo-especial-J.jpg" alt="">
+        <p>O GERENTE</p>
+     </div>
+
+     <div>
+        <img src="o gerente.webp" alt="">
+        <p>O LIDER</p>
+     </div>
+
+    </section>
+
+
     <footer>
 
         
