--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li>
                     <a href="">SOBRE</a>
                 </li>
-            <img src="slogam.jpg" alt="">
+            <img src="logo-Photo.png" alt="">
             </ul>
         </nav>
 
@@ -43,12 +43,14 @@
                 ANALISE DE CREDITO
             </h1>
             <p>
-                olâ lindo tudo bem? eu sou renata muito prazer, bom Analisar o crédito de um cliente consiste em verificar se ele realmente tem condições de honrar o compromisso assumido. O objetivo é identificar o perfil e as condições financeiras do cliente a partir das suas informações básicas e dos seus dados financeiros
+                olâ lindo tudo bem? eu sou renata muito prazer, bom Analisar o crédito de um cliente consiste em verificar se ele realmente tem condições de honrar o compromisso assumido. O objetivo é identificar o perfil e as condições financeiras do cliente a partir das suas informações básicas e dos seus dados financeiros.  bom agora vamos conhecer o patrâo, dono e o lider
             </p>
+
+            
         </div>
     </section>
 
-    <h2>OS DONOS DA EMPRESA</h2>
+    
 
     <section class="section">
 
