--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
      <div>
         <img src="o gerente.webp" alt="">
-        <p>O LIDER</p>
+        <p>O diretor</p>
      </div>
 
      <div>
@@ -81,7 +81,7 @@
 
      <div>
         <img src="o gerente.webp" alt="">
-        <p>O LIDER</p>
+        <p>O diretor</p>
      </div>
 
     </section>
