--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 ANALISE DE CREDITO
             </h1>
             <p>
-                olâ lindo tudo bem? eu sou renata muito prazer, bom Analisar o crédito de um cliente consiste em verificar se ele realmente tem condições de honrar o compromisso assumido. O objetivo é identificar o perfil e as condições financeiras do cliente a partir das suas informações básicas e dos seus dados financeiros. bom agora vamos ver algumas regrinhas e depois conhecer o patrâo e a empresa.
+                olâ lindo tudo bem? eu sou renata muito prazer, bom Analisar o crédito de um cliente consiste em verificar se ele realmente tem condições de honrar o compromisso assumido. O objetivo é identificar o perfil e as condições financeiras do cliente a partir das suas informações básicas e dos seus dados financeiros. bom agora vamos ver alguns topicos e depois conhecer o chefe e os funcionarios.
             </p>
 
             
