--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
      <div>
         <img src="JENIFFER LOPEZ.webp" alt="">
-        <p>A SUPERVISORA</p>
+        <p> SUPERVISORA</p>
      </div>
 
     </section>
