--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 
      <div>
         <img src="marina-ruy-barbosa.jpg" alt="">
-        <p>A PATROA</p>
+        <p>a PATROA</p>
      </div>
 
      <div>
         <img src="bruna-biancardi.webp" alt="">
-        <p>A DIRETORA</p>
+        <p>DIRETORA</p>
      </div>
 
      <div>
